--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -74,6 +74,7 @@ let defaultLocalData = {
       markers: 'https://joric.github.io/maps/examples/data/geojson.markers.folon.json',
       corners: [{"lat":51.567501756256505,"lng":-0.1764177405505252},{"lat":51.567501756256505,"lng":0.06345199242442146},{"lat":51.41815601816625,"lng":-0.1764177405505252},{"lat":51.41815601816625,"lng":0.06345199242442146}],
       controlPoints: {
+        // coordinates from google maps (right click on marker to copy)
         'London Eye':[51.50321434582702, -0.11951572655167679],
         'Tower Bridge': [51.50558406901761, -0.07540017069646172],
         'Bromley Police Station': [51.399351080832055, 0.017749364528318105],
@@ -81,6 +82,11 @@ let defaultLocalData = {
         'London City Airport': [51.504990558960266, 0.04948573753140306],
         'British Library': [51.530051306080956, -0.12764840735851554],
         'The Gherkin': [51.51462468445813, -0.08024345156127621],
+        'National Portrait Gallery': [51.51030881945582, -0.1283529531747778],
+        'Waterloo Bridge': [51.50866884333985, -0.11685807045491195],
+        'London Bridge': [51.508016432737406, -0.08770161133087216],
+        'Southwark Bridge': [51.50905245934331, -0.09405037235675627],
+        'Blackfriars Bridge': [51.50983145126394, -0.10429026299831769],
       },
       smoothing: 0.1,
       power: 5.0,
