--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -114,7 +114,7 @@ let area = mapId;
 let london = [51.505, -0.09];
 let pos = london;
 let zoom = 11;
-let handles = [];
+let globalImage = null;
 
 const map = L.map('map', {
   zoomSnap: .1,
@@ -328,8 +328,12 @@ function loadMarkers() {
   })
 }
 
-function loadImages() {
-  let img = L.distortableImageOverlay(settings.remap.image, {
+
+function reloadImage() {
+  if (globalImage) map.removeLayer(globalImage);
+  delete globalImage;
+
+  globalImage = L.distortableImageOverlay(settings.remap.image, {
     mode: 'lock',
     selected: true,
     //actions: [L.DragAction, L.ScaleAction, L.DistortAction, L.RotateAction, L.FreeRotateAction, L.LockAction, L.OpacityAction, L.BorderAction, L.ExportAction, L.DeleteAction, L.RestoreAction],
@@ -337,7 +341,11 @@ function loadImages() {
     corners: settings.remap.corners,
   }).on('update', imageUpdated).on('load', updateMarkers)
 
-  imgGroup.addLayer(img);
+  imgGroup.addLayer(globalImage);
+}
+
+function loadImages() {
+  reloadImage();
 }
 
 function updateMarkers() {
@@ -535,8 +543,9 @@ function saveLocalData() {
 function resetLocalData() {
   localData = defaultLocalData;
   settings = localData[mapId];
-  saveSettings();
+  reloadImage();
   updateMarkers();
+  saveSettings();
 }
 
 function exportMarkers() {
