--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -90,6 +90,7 @@ let defaultLocalData = {
         'One Canada Square': [51.50503451700189, -0.019506823380022808],
         'Winchester Palace': [51.50702867207373, -0.09100878935130598],
         'Millennium Bridge': [51.50968072831046, -0.09844008513055418],
+        'Trafalgar Square': [51.50810008166447, -0.1280552079199807],
       },
       smoothing: 0.1,
       power: 5.0,
