--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -93,11 +93,17 @@ let defaultLocalData = {
         'Trafalgar Square': [51.50810008166447, -0.1280552079199807],
         'Leicester Square': [51.510455442178056, -0.13006704685557416],
         'Piccadilly Circus': [51.50988505564679, -0.1342789545165483],
+        'Buckingham Palace': [51.501374177823884, -0.14188977026816976],
+        'Camden Town Underground Station': [51.539399688690885, -0.14265421056691752],
+        'Royal Albert Hall': [51.50091125268883, -0.1773662194234649],
+        'Natural History Museum': [51.49673453408684, -0.17636726840925745],
+        'St James\'s Palace': [51.50461770647941, -0.13785024457073053],
+        'Tennis Museum': [51.43454046598776, -0.21336507027650478],
       },
-      smoothing: 0.1,
+      smoothing: 0.0428,
       power: 5.0,
-      activeLayers: {'Images':true, 'Markers': true},
-      provider: 'OpenStreetMap_Mapnik',
+      activeLayers: {'Markers': true},
+      provider: 'CartoDB_Voyager',
       warped: true,
     }
   }
@@ -403,8 +409,18 @@ function loadMarkers() {
     let markers = L.geoJSON(data, {
       style: f => {color: f.properties.color},
       filter: f=> {
-        let area = f.properties.location;
+
+        let o = f.properties;
+        let area = o.location;
+        let type = o.description;
         let skip = (area != mapId && !(maps[mapId].regions && maps[mapId].regions[area]));
+
+        // hide some of the location markers on the base map
+        if (mapId == Object.keys(maps)[0]) {
+          if (['City','Town'].includes(o.title) && area != mapId && o.ref_id!='07310FF5') skip = true;
+          if (type == 'Military Base' && o.ref_id != '0732F385') skip = true;
+        }
+
         return !skip;
       },
       pointToLayer: function (feature, latlng) {
@@ -472,7 +488,15 @@ function updateMarkers() {
   for (marker of Object.values(markers._layers)) {
     let o = marker.feature.properties;
     let loc = marker.feature.geometry.coordinates;
+
+
+    if (o.title == 'Camden Town Underground Station') {
+      console.log('here', settings.remap.controlPoints);
+    }
+
     marker.setOpacity(settings.remap.controlPoints[o.title] ? 1 : .3);
+
+
     marker.setLatLng( project(marker, controlPoints ) );
   }
 }
@@ -642,10 +666,8 @@ function saveLocalData() {
 
 function resetLocalData() {
   localData = defaultLocalData;
-  settings = localData[mapId];
-  reloadImage();
-  updateMarkers();
   saveSettings();
+  location.reload();
 }
 
 function exportMarkers() {
