--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -76,175 +76,7 @@ let defaultLocalData = {
       image: 'https://joric.github.io/maps/examples/data/LondonWorld.jpg',
       markers: 'https://joric.github.io/maps/examples/data/geojson.markers.folon.json',
       corners: [{"lat":51.567501756256505,"lng":-0.1764177405505252},{"lat":51.567501756256505,"lng":0.06345199242442146},{"lat":51.41815601816625,"lng":-0.1764177405505252},{"lat":51.41815601816625,"lng":0.06345199242442146}],
-      controlPoints:
-// start of control poinst
-{
-  "London Eye": [
-    51.50321434582702,
-    -0.11951572655167679
-  ],
-  "Tower Bridge": [
-    51.50558406901761,
-    -0.07540017069646172
-  ],
-  "Bromley Police Station": [
-    51.399351080832055,
-    0.017749364528318105
-  ],
-  "Camelot": [
-    51.431596648896274,
-    -0.20275026968126383
-  ],
-  "London City Airport": [
-    51.504990558960266,
-    0.04948573753140306
-  ],
-  "British Library": [
-    51.530051306080956,
-    -0.12764840735851554
-  ],
-  "The Gherkin": [
-    51.51462468445813,
-    -0.08024345156127621
-  ],
-  "National Portrait Gallery": [
-    51.51030881945582,
-    -0.1283529531747778
-  ],
-  "Waterloo Bridge": [
-    51.50866884333985,
-    -0.11685807045491195
-  ],
-  "London Bridge": [
-    51.508016432737406,
-    -0.08770161133087216
-  ],
-  "Southwark Bridge": [
-    51.50905245934331,
-    -0.09405037235675627
-  ],
-  "Blackfriars Bridge": [
-    51.50983145126394,
-    -0.10429026299831769
-  ],
-  "One Canada Square": [
-    51.50503451700189,
-    -0.019506823380022808
-  ],
-  "Winchester Palace": [
-    51.50702867207373,
-    -0.09100878935130598
-  ],
-  "Millennium Bridge": [
-    51.50968072831046,
-    -0.09844008513055418
-  ],
-  "Trafalgar Square": [
-    51.50810008166447,
-    -0.1280552079199807
-  ],
-  "Leicester Square": [
-    51.510455442178056,
-    -0.13006704685557416
-  ],
-  "Piccadilly Circus": [
-    51.50988505564679,
-    -0.1342789545165483
-  ],
-  "Buckingham Palace": [
-    51.501374177823884,
-    -0.14188977026816976
-  ],
-  "Camden Town Underground Station": [
-    51.539399688690885,
-    -0.14265421056691752
-  ],
-  "Royal Albert Hall": [
-    51.50091125268883,
-    -0.1773662194234649
-  ],
-  "Natural History Museum": [
-    51.49673453408684,
-    -0.17636726840925745
-  ],
-  "St James's Palace": [
-    "51.504532850000004",
-    "-0.1377553423767412"
-  ],
-  "Tennis Museum": [
-    51.43454046598776,
-    -0.21336507027650478
-  ],
-  "Shadwell Fire Station": [
-    "51.510944949999995",
-    "-0.05583709999999986"
-  ],
-  "Bank Of England": [
-    "51.51413225",
-    "-0.08892476721255456"
-  ],
-  "London Mithraeum": [
-    "51.51248495",
-    "-0.09063813651893084"
-  ],
-  "Charing Cross Station": [
-    "51.5085068",
-    "-0.1254004"
-  ],
-  "Bromley South Station": [
-    "51.4006268",
-    "0.0170661"
-  ],
-  "Shakespeare's Globe": [
-    "51.50811965",
-    "-0.0971901351203674"
-  ],
-  "London Aquarium": [
-    "51.5028354",
-    "-0.1185929"
-  ],
-  "St Thomas Hospital": [
-    "51.49906445",
-    "-0.11869021253163324"
-  ],
-  "Lambeth Palace": [
-    "51.4955481",
-    "-0.12008255397320075"
-  ],
-  "Victoria and Albert Museum": [
-    "51.496883800000006",
-    "-0.17163721656927572"
-  ],
-  "Wellington Arch": [
-    "51.5025031",
-    "-0.15081986768597055"
-  ],
-  "Westminster University": [
-    "51.5224585",
-    "-0.1548451"
-  ],
-  "Oxford Circus": [
-    "51.5152681",
-    "-0.1420078"
-  ],
-  "Borough Market": [
-    "51.505581500000005",
-    "-0.09019844606970746"
-  ],
-  "Westminster Abbey": [
-    "51.499399",
-    "-0.1273910483333311"
-  ],
-  "St James's Park": [
-    "51.50312945",
-    "-0.13316503576441757"
-  ],
-  "The Postal Museum": [
-    "51.5247243",
-    "-0.1139982"
-  ]
-}// end of control points
-      ,
+      controlPoints:{},
       smoothing: 0.0428,
       power: 5.0,
       activeLayers: {'Markers': true},
@@ -270,10 +102,23 @@ maps = {
 }
 
 let localDataName = 'joricsRemap';
-let localData = JSON.parse(localStorage.getItem(localDataName)) || defaultLocalData;
 
 let mapId = 'LondonWorld';
-let settings = localData[mapId];
+let settings = null;
+
+// fetch local settings, if any
+if (!localStorage.getItem(localDataName)) {
+  fetch(localDataName+'.json').then(r=>r.json()).then(data=>{
+    localData = data;
+    updateMarkers();
+    console.log('saving local settings');
+    settings = localData[mapId];
+    saveSettings();
+  })
+}
+
+let localData = JSON.parse(localStorage.getItem(localDataName)) || defaultLocalData;
+settings = localData[mapId];
 
 function saveSettings() {
   //console.log(localData);
@@ -842,8 +687,7 @@ function saveLocalData() {
 }
 
 function resetLocalData() {
-  localData = defaultLocalData;
-  saveSettings();
+  localStorage.removeItem(localDataName);
   location.reload();
 }
 
