--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -114,6 +114,7 @@ if (!localStorage.getItem(localDataName)) {
     console.log('saving local settings');
     settings = localData[mapId];
     saveSettings();
+    location.reload();
   })
 }
 
