--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">  
 
-  <title>Joric's Remap Example - Leaflet</title>
+  <title>Joric's Remap - Leaflet</title>
   <link rel="shortcut icon" type="image/x-icon" href="data:," />
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
