--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -433,10 +433,20 @@ function loadMarkers() {
         content += '<br/><br/><button id="unbind-marker-btn">Unbind Marker</button>';
       }
 
-      content += '<br/><br/><button id="search-location-btn">Search Location</button>';
+      content += '<br/><br/><form id="search-location-form"><input type="hidden" id="oldLat"><input type="hidden" id="oldLng"><input id="search-location-input"> <button id="search-location-btn" type="submit">Search Location</button></form>';
 
       setTimeout(function() {
-        if (e=document.querySelector('#search-location-btn')) e.onclick = function() { searchLocation(l.feature.properties.title)};
+        if (input=document.querySelector('#search-location-input')) {
+          input.value = l.feature.properties.title;
+          document.querySelector('#oldLat').value = l.getLatLng().lat;
+          document.querySelector('#oldLng').value = l.getLatLng().lng;
+          if (e=document.querySelector('#search-location-form')) {
+            e.onsubmit = function() {
+              searchLocation(input.value, parseFloat(document.querySelector('#oldLat').value), parseFloat(document.querySelector('#oldLng').value))
+              return false;
+            }
+          }
+        }
         if (e=document.querySelector('#unbind-marker-btn')) e.onclick = function() { unbindMarker(l.feature.properties.title)};
       }, 250,);
 
@@ -718,41 +728,46 @@ function exportMarkers() {
   saveTextToFile(JSON.stringify(data, null, 2), filename);
 }
 
-function searchLocation(placeName) { 
-  let q = encodeURIComponent(placeName + " London");
-
+function searchLocation(placeName, oldLat, oldLng) { 
+  let q = encodeURIComponent(placeName);
   const url = `https://nominatim.openstreetmap.org/search?q=${q}&format=json&limit=1`;
-
   fetch(url)
       .then(response => response.json())
       .then(data => {
           if (data.length > 0) {
               const latitude = data[0].lat;
               const longitude = data[0].lon;
-
               const displayName = data[0].display_name;
-
-              console.log(JSON.stringify(data, null, 2));
-
+              //console.log(JSON.stringify(data, null, 2));
               map.closePopup();
 
               let text = `Place found! Are you sure you want to set new control point?`
               + `\n\n${data[0].name}\n${data[0].addresstype}\n\n${data[0].display_name}\n[${latitude}, ${longitude}]`;
 
-              if (confirm(text)) {
-                //alert(`Latitude: ${latitude}, Longitude: ${longitude}`);
-                settings.remap.controlPoints[placeName] = [latitude, longitude];
-                map.flyTo([latitude, longitude]);
-                saveSettings();
-                updateMarkers();
-              }
+              let latlng = L.latLng([latitude, longitude]);
+              let latlngOld = L.latLng([oldLat, oldLng]);
+              let marker = L.circleMarker(latlng, {radius: 10, color: 'red'}).addTo(map);
 
+              map.flyTo(latlng, map.getZoom(), {duration: .5});
+
+              map.once('moveend', function() {
+                if (confirm(text)) {
+                  settings.remap.controlPoints[placeName] = [latlng.lat, latlng.lng];
+                  map.flyTo(latlng);
+                  saveSettings();
+                  updateMarkers();
+                  map.removeLayer(marker);
+                } else {
+                  map.flyTo(latlngOld, map.getZoom(), {duration: .5});
+                  map.removeLayer(marker);
+                }
+              });
 
           } else {
               alert('Place not found');
           }
       })
-      .catch(error => alert('Error:', error));
+      //.catch(error => alert('Error:', error));
 }
 
 window.onload = e => {
